--- a/build.xml
+++ b/build.xml
@@ -75,11 +75,9 @@
     </zip>
   </target>
 
-  <target name="cordova" />
-
   <target name="install-compilers">
     <exec dir="." executable="cmd" >
-      <arg line="/c npm i -g html-minifier clean-css npx google-closure-compiler"/>
+      <arg line="/c npm i -g html-minifier clean-css-cli npx google-closure-compiler"/>
     </exec>
   </target>
 </project>
