Offline access enabled. Install app works.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "name": "Ofudesaki Browser",
   "short_name": "Ofudesaki Browser",
   "lang": "en-US",
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#6FBEF3",
   "background_color": "#FFFFFF",
